--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
 
     <style type="text/css">
+        body {
+            background-color: #222;
+        }
         .container {
             padding: 0;
             padding-top: 2em;
@@ -18,6 +21,7 @@
         .header {
             text-align: center;
             margin-bottom: 1em;
+            color: white;
         }
 
         #player-container {
